# Synapse

./: .gitignore  Cargo.toml
.github/workflows/: ci.yml
crates/flymouse-clipboard/: Cargo.toml
crates/flymouse-input/: Cargo.toml
crates/flymouse-input/src/: capture.rs  lib.rs  simulate.rs
crates/flymouse-net/: Cargo.toml
crates/flymouse-net/src/: client.rs  discovery.rs  server.rs
crates/flymouse-protocol/: Cargo.toml
crates/flymouse-protocol/src/: codec.rs  input.rs  lib.rs  message.rs  screen.rs
crates/flymouse-screen/: Cargo.toml
crates/flymouse-screen/src/: layout.rs  lib.rs
crates/synapse-clipboard/: Cargo.toml
crates/synapse-clipboard/src/: lib.rs
crates/synapse-input/: Cargo.toml
crates/synapse-input/src/: capture.rs  simulate.rs
crates/synapse-net/: Cargo.toml
crates/synapse-net/src/: client.rs  discovery.rs  lib.rs  server.rs
crates/synapse-protocol/: Cargo.toml
crates/synapse-protocol/src/: message.rs  screen.rs
crates/synapse-screen/: Cargo.toml
crates/synapse-screen/src/: layout.rs
src/: main.rs
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: lib.rs  main.rs
ui/: index.html  main.js  style.css
