[workspace]
members = [
    "crates/synapse-protocol",
    "crates/synapse-input",
    "crates/synapse-clipboard",
    "crates/synapse-net",
    "crates/synapse-screen",
    "src-tauri",
]
resolver = "2"

[workspace.dependencies]
tokio = { version = "1", features = ["full"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
bincode = "1"
anyhow = "1"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
bytes = "1"
tokio-util = { version = "0.7", features = ["codec"] }
tauri = { version = "2", features = [] }
tauri-build = { version = "2", features = [] }

synapse-protocol = { path = "crates/synapse-protocol" }
synapse-input = { path = "crates/synapse-input" }
synapse-clipboard = { path = "crates/synapse-clipboard" }
synapse-net = { path = "crates/synapse-net" }
synapse-screen = { path = "crates/synapse-screen" }

[package]
name = "synapse"
version = "0.1.0"
edition = "2021"

[dependencies]
clap = { version = "4", features = ["derive"] }
tokio = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
anyhow = { workspace = true }
synapse-protocol = { workspace = true }
synapse-input = { workspace = true }
synapse-clipboard = { workspace = true }
synapse-net = { workspace = true }
synapse-screen = { workspace = true }
