[package]
name = "synapse-gui"
version = "0.1.0"
edition = "2021"

[build-dependencies]
tauri-build = { workspace = true }

[dependencies]
tauri = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
tokio = { workspace = true }
anyhow = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
synapse-protocol = { workspace = true }
synapse-net = { workspace = true }
synapse-input = { workspace = true }
synapse-clipboard = { workspace = true }
synapse-screen = { workspace = true }
