[package]
name = "flymouse-net"
version = "0.1.0"
edition = "2021"

[dependencies]
flymouse-protocol = { workspace = true }
tokio = { workspace = true }
tokio-util = { workspace = true }
bytes = { workspace = true }
tracing = { workspace = true }
anyhow = { workspace = true }
futures = "0.3"
hostname = "0.4"
mdns-sd = "0.11"
